--- a/src/Display/Display.css
+++ b/src/Display/Display.css
@@ -1,10 +1,14 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Mono:300");
 
 .Display {
-  font-family: "Roboto Mono", monospace;
   background-color: black;
   color: tomato;
+  font-family: "Roboto Mono", monospace;
+  font-weight: 300;
   font-size: 8rem;
-  padding: 0 0.5ch 0.1ch;
+  margin: 1rem 0;
+  padding: 0;
   position: relative;
+  text-align: center;
+  vertical-align: middle;
 }
